Fixed Height Issues (Distortion of Document Height on Mobile Devices)

--- a/stake.css
+++ b/stake.css
@@ -115,7 +115,6 @@ i {
 .fixed-left {
     background-color: #0F202F;
     width: 100%;
-    /* height: 100%; */
     position: relative;
     display: flex;
     flex-direction: column;
@@ -404,7 +403,6 @@ i {
     background-color: #0F202F;
     width: 60px;
     min-width: 60px;
-    /* height: 100%; */
     font-size: 13px;
     font-weight: 600;
     color: #0F202F;
@@ -557,7 +555,6 @@ i {
 
 .odds-page {
     flex-grow: 1;
-    /* height: 100%; */
     min-width: calc(100% - 590px);
     background-color: #1B2D38;
     font-size: 13px;
@@ -1834,7 +1831,6 @@ tbody .mc-event span {
 /*CASHIER (VIEW SELECTED ODDS & CHECKOUT)*/
 
 .cashier {
-    /* height: 100%; */
     width: 350px;
     min-width: 350px;
     position: relative;
@@ -2076,15 +2072,10 @@ tbody .mc-event span {
 /*Selected Odds (Games Booked)*/
 
 .games-booked {
-    /* height: calc(100% - 300px); */
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
-
-/* .games-booked-multi {
-    height: calc(100% - 340px);
-} */
 
 .games-booked::-webkit-scrollbar {
     width: 6px;
